# smman

./: Makefile.am  README  autogen.sh  configure.ac
debian/: changelog  control  rules  smman.init.in  smman.postinst  smman.postrm  smman.prerm
debian/smman/DEBIAN/: control  md5sums
doc/: Doxyfile  Makefile.am  smman.dox.in
doc/doxygen/data/: foot.html  head.html
doc/doxygen/data/css/: a.css  edoxy.css  style.css
doc/gimp/: intro.xcf
rules/: auth_failed  auth_success  ssh_publickey_accept  tags_test  watch_alllog  watch_httpd
src/include/: Conf.h  Rules.h  Spy.h  Store.h
src/lib/: Makefile.mk  conf.c
src/lib/conf/: conf_load.c  conf_main.c  conf_private.h
src/lib/rules/: rules_load.c  rules_main.c  rules_private.h
src/lib/spy/: spy_file.c  spy_line.c  spy_main.c  spy_private.h
src/lib/store/: store_event.c  store_main.c  store_private.h  store_utils.c
